# my-vcpkg-ports

./: Readme.md  VERSION_UPDATES.txt  mesa-clang-cl.patch  update-ports.cmake
alphaplot/: ext_dep.patch  install.patch  muparser_wchar_t.patch  portfile.cmake  qt6.patch  vcpkg.json
amd-comgr/: portfile.cmake  vcpkg.json
amd-device-libs/: portfile.cmake  vcpkg.json
arrow/: portfile.cmake  vcpkg.json
blas/: portfile.cmake  vcpkg-cmake-wrapper.cmake.in  vcpkg.json
boost-all/: .gitignore  000-clang-win.patch  CMakeLists.txt  create.cmake  portfile.cmake  readme.md  usage.in  vcpkg-cmake-wrapper.cmake.in
boost-atomic/: portfile.cmake
boost-modular-build-helper/: CMakeLists.txt  Jamroot.jam.in  boost-modular-build.cmake  portfile.cmake  vcpkg.json
boost-uninstall/: portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
calysto-metakernel/: portfile.cmake  vcpkg.json
cmakecs/: CONTROL  portfile.cmake  vcpkg.json
cmakejson/: portfile.cmake  vcpkg.json
coin/: portfile.cmake
coin-or-ipopt/: portfile.cmake
cpuinfo/: portfile.cmake  vcpkg.json
cryptopp/: fix-clang-cl.patch  patch.patch  portfile.cmake
cuda/: hash-linux-ppc64le.cmake  hash-linux-sbsa.cmake  hash-linux-x86_64.cmake  new_hash-windows-x86_64.cmake  portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json  vcpkg_find_cuda.cmake
cudnn/: portfile.cmake  vcpkg.json
cusparselt/: portfile.cmake
draco/: portfile.cmake
dsfmt/: CMakeLists.txt  portfile.cmake  vcpkg.json
eigen3/: CONTROL  fix-index.patch  portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
fltk/: fix-narrow.patch
freecad/: FreeCAD.bat  diff.patch  fixes2.patch  freecad.patch  portfile.cmake  vcpkg.json
freecad-ondsel/: FreeCAD.bat  build-fixes.patch  freecad.patch  portfile.cmake  vcpkg.json
gfxreconstruct/: portfile.cmake
gklib/: fix-io.patch  portfile.cmake
glpk/: glpk.pc.in  portfile.cmake
gtest/: portfile.cmake
hdf5/: export_deprecated_symbols.patch  portfile.cmake  vcpkg-cmake-wrapper.cmake
hdf5_invalid/: export_deprecated_symbols.patch
hpx/: fix-debug.patch  fix-dup-symbols.patch  fix-static-definition.patch  fix_pkg_generation.patch  format.patch  portfile.cmake  tbb.patch  usage  vcpkg.json
intel-mkl/: portfile.cmake  usage
jkqtplotter/: portfile.cmake  remove_deployment.patch  remove_std.patch  vcpkg.json
julia/: Notworkingpatch.txt  compile  external-libuv.patch  external-utf8proc.patch  libnames.patch  makefiles.patch  portfile.cmake  remaining.patch  vcpkg.json  windres-rc  wip.patch  wip2.patch  wip3.patch  wip4.patch  wip5.patch  wip6.patch  wip7.patch  wip_wip.diff
julia-libblastrampoline/: CMakeLists.txt  make-msvc-work.patch  portfile.cmake  strdup.patch  vcpkg.json
julia-neumann/: Downloads.patch  LibCURL.patch  Run_Julia.txt  portfile.cmake  vcpkg.json
jupyter-notebook/: portfile.cmake  vcpkg.json
lapack/: portfile.cmake  vcpkg-cmake-wrapper.cmake.in  vcpkg.json
libafterimage/: cpp-flags.diff  portfile.cmake  vcpkg.json
libmysql/: fix_dup_symbols.patch
libtorch/: clang-cl.patch  cmake-fixes.patch  disable-cuda-check.patch  fix-api.patch  fix-build.patch  fix-c10-glog.patch  fix-cmake.patch  fix-compile.patch  fix-fbgemm-include.patch  fix-windows.patch  kineto.patch  more-fixes.patch  portfile.cmake  vcpkg-dependencies.cmake  vcpkg.json
libuv/: julia.diff  portfile.cmake  usage
libvorbis/: portfile.cmake
libwebp/: dll.patch  portfile.cmake
libwhich/: CMakeLists.txt  fix-msvc.patch  portfile.cmake  vcpkg.json
llama-cpp/: mkl.patch  portfile.cmake  vcpkg.json
llama-cpp-python/: portfile.cmake  vcpkg.json
llvm/: portfile.cmake
magma/: clang-cuda.patch  fix-cuda.patch  no-tests.patch  portfile.cmake  vcpkg.json
matlab/: CMakeLists.txt  FindMatlab.cmake  portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
mbedtls/: portfile.cmake  shared.patch  vcpkg.json
med-fichier/: hdf5-2.patch  more-fixes.patch  portfile.cmake  vcpkg.json
mesa/: enum.patch  fix.patch  portfile.cmake
muparser/: nominmax.patch  portfile.cmake
mycel/: CONTROL  portfile.cmake  vcpkg.json
netgen/: 142.diff  build.patch  downstream-fixes.patch  fix-cgns-link.patch  fix_m_pi.patch  occ-78.patch  portfile.cmake  vcpkg.json
nlohmann-json/: fix_serializer.patch  portfile.cmake  vcpkg.json
numpy/: fix-build.patch  portfile.cmake  vcpkg.json
omniorb/: add_win_into_autotools.patch  def_gen_fix.patch  fix_dependency.patch  msvc-src-build-fixes.patch  portfile.cmake  python-fixes.patch  remove_tools.patch  vcpkg.json  vcpkg.mk  wip.patch  wip2.patch  wip3.patch  wip5.patch  wip7.patch  wip8.patch  wip9.patch
omniorbpy/: portfile.cmake  vcpkg.json  vcpkg.mk  wip.patch
ondselsolver/: fix-math.patch  lib-type.patch  portfile.cmake  vcpkg.json
onetbb/: config.patch  portfile.cmake  vcpkg.json
onnx/: fix-build.patch  fix-python.patch  portfile.cmake  vcpkg.json
onnx-optimizer/: fix-build.patch  portfile.cmake
opencascade/: fix-pdb-find.patch  fix_build.patch  portfile.cmake  vcpkg.json  wip.patch
opencsg/: CMakeLists.txt  portfile.cmake  vcpkg.json
opencv4/: 0017-fix-flatbuffers.patch  portfile.cmake
openexr/: avx.patch
openlibm/: portfile.cmake  vcpkg.json  wip.patch
openscad/: bld-fix.patch  portfile.cmake  vcpkg.json
openvdb/: portfile.cmake  usage  vcpkg-cmake-wrapper.cmake.in
orc/: clang-cl.patch  portfile.cmake
paraview/: auto_ptr.diff  clang-cl.patch  cxx.diff  portfile.cmake  python_include.patch  python_wrapper.patch  using_std.diff
pcg-cpp/: CONTROL  portfile.cmake  vcpkg.json
pcl/: fix_clang-cl_build.patch  portfile.cmake  usage
pivy/: fix-build.patch  fix-install-dest.diff  portfile.cmake  vcpkg.json
pocketfft/: portfile.cmake
protobuf/: portfile.cmake
prusaslicer/: 9901.diff  portfile.cmake  quick-fix2.patch  quick-hack.diff  vcpkg.json
pthreadpool/: portfile.cmake  vcpkg.json
py-accelerate/: portfile.cmake  vcpkg.json
py-aiofiles/: portfile.cmake  vcpkg.json
py-aiohttp/: portfile.cmake  vcpkg.json
py-aiosignal/: portfile.cmake  vcpkg.json
py-altair/: portfile.cmake  vcpkg.json
py-annotated-types/: portfile.cmake  vcpkg.json
(+791 files in other folders)
