cmake_minimum_required(VERSION 3.19)

if(NOT COMPONENTS)
    set(COMPONENTS MAT_LIBRARY)
endif()
list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
project(MATLAB-find-package)
set(MATLAB_FIND_DEBUG ON)
set(MATLAB_ADDITIONAL_VERSIONS "2021b=9.11")
find_package(Matlab 9.11 COMPONENTS ${COMPONENTS} REQUIRED)
